# GameSeeker-VideoGamesRecommendationChatbot

./: README.md  pyproject.toml  requirements.txt
src/: main.py  main_v2.py
src/backend/: app.py  main.py
src/backend/langgraph_logic/: chains.py  graph.py  nodes.py  utils.py
src/frontend/: package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.js  App.scss  index.css  index.js  index.scss
src/frontend/src/components/: ChatBox.js  ChatMessage.js  ChatWindow.js  ChatWindow.scss  MessageDisplay.js  MessageInput.js  MessageInput.scss  MessageList.js  MessageList.scss  NavBar.js
src/langgraph_logic/: agents.py  graph.py  state.py
src/langgraph_logic_v2/: chains.py  graph.py  nodes.py  state.py  utils.py
