[tool.poetry]
name = "gameseeker-videogamesrecommendationchatbot"
version = "0.1.0"
description = ""
authors = ["MOUNAJEDK <karimmounajed127@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.44.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
langchain-core = "^0.2.9"
langgraph = "^0.0.69"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
